--- a/package.json
+++ b/package.json
@@ -2,9 +2,18 @@
   "name": "@shibaoxu/shibaoxu-toy",
   "version": "1.0.2",
   "description": "learning build npm package",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "tslint -p tsconfig.json",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "build": "tsc",
+    "test": "jest --config jestconfig.json",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test && npm run lint",
+    "preversion": "npm run lint",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
   },
   "repository": {
     "type": "git",
@@ -20,5 +29,19 @@
   "bugs": {
     "url": "https://github.com/shibaoxu/shibaoxu-toy/issues"
   },
-  "homepage": "https://github.com/shibaoxu/shibaoxu-toy#readme"
+  "homepage": "https://github.com/shibaoxu/shibaoxu-toy#readme",
+  "devDependencies": {
+    "@types/jest": "^26.0.3",
+    "jest": "^26.1.0",
+    "prettier": "^2.0.5",
+    "ts-jest": "^26.1.1",
+    "tslint": "^6.1.2",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.9.5"
+  },
+  "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+  "lint": "tslint -p tsconfig.json",
+  "files": [
+    "lib/**/*"
+  ]
 }
